[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic[all]>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.43",
    "sqlalchemy-utils>=0.41.2",
]
